--- a/WeiBoDemo/.settings/org.eclipse.wst.common.component
+++ b/WeiBoDemo/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="FirstServlet">
+    <wb-module deploy-name="WeiBoDemo">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="FirstServlet"/>
-        <property name="java-output-path" value="/FirstServlet/build/classes"/>
+        <property name="context-root" value="WeiBoDemo"/>
+        <property name="java-output-path" value="/WeiBoDemo/build/classes"/>
     </wb-module>
 </project-modules>
